<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView_bluetooth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_name"
        android:textAppearance="@style/text_black" />

    <EditText
        android:id="@+id/editText_bluetooth_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_pair_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pair_key"
        android:textAppearance="@style/text_black" />

    <EditText
        android:id="@+id/editText_pair_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_ok"
        style="@style/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
