<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ardu.gorient.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp" >

        <Button
            android:id="@+id/button_navigate"
            style="@style/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:drawableLeft="@android:drawable/ic_menu_compass"
            android:text="@string/navigate" />

        <Button
            android:id="@+id/button_settings"
            style="@style/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/button_navigate"
            android:layout_below="@id/button_navigate"
            android:drawableLeft="@android:drawable/ic_menu_preferences"
            android:text="@string/settings" />

        <Button
            android:id="@+id/button_about"
            style="@style/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/button_settings"
            android:layout_below="@id/button_settings"
            android:drawableLeft="@android:drawable/ic_dialog_info"
            android:text="@string/about" />

        <Button
            android:id="@+id/button_iesire"
            style="@style/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/button_navigate"
            android:layout_below="@id/button_about"
            android:drawableLeft="@android:drawable/ic_notification_clear_all"
            android:text="@string/exit" />

    </RelativeLayout>
    
</RelativeLayout>